# serializer version: 1
# name: test_betr_parser_mlb_pregame_count
  dict({
    'total': 515,
  })
# ---
# name: test_betr_parser_mlb_pregame_golden
  list([
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 1.5,
      'line_kind': 'half_point',
      'market': 'h+r+rbi',
      'over_odds': -120,
      'player': 'A.J. Ewing',
      'sportsbook': 'Betr',
      'under_odds': None,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 0.5,
      'line_kind': 'half_point',
      'market': 'singles',
      'over_odds': -120,
      'player': 'A.J. Ewing',
      'sportsbook': 'Betr',
      'under_odds': None,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 0.5,
      'line_kind': 'half_point',
      'market': 'total_bases',
      'over_odds': None,
      'player': 'A.J. Ewing',
      'sportsbook': 'Betr',
      'under_odds': -120,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 0.5,
      'line_kind': 'half_point',
      'market': 'runs',
      'over_odds': -120,
      'player': 'Adley Rutschman',
      'sportsbook': 'Betr',
      'under_odds': None,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 0.5,
      'line_kind': 'half_point',
      'market': 'singles',
      'over_odds': None,
      'player': 'Adley Rutschman',
      'sportsbook': 'Betr',
      'under_odds': -120,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 1.5,
      'line_kind': 'half_point',
      'market': 'total_bases',
      'over_odds': -120,
      'player': 'Adley Rutschman',
      'sportsbook': 'Betr',
      'under_odds': None,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 1.5,
      'line_kind': 'half_point',
      'market': 'h+r+rbi',
      'over_odds': -120,
      'player': 'Alec Bohm',
      'sportsbook': 'Betr',
      'under_odds': None,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 0.5,
      'line_kind': 'half_point',
      'market': 'singles',
      'over_odds': -120,
      'player': 'Alec Bohm',
      'sportsbook': 'Betr',
      'under_odds': None,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 1.5,
      'line_kind': 'half_point',
      'market': 'h+r+rbi',
      'over_odds': -120,
      'player': 'Alex Bregman',
      'sportsbook': 'Betr',
      'under_odds': -120,
    }),
    dict({
      'is_main_line': None,
      'league': 'MLB',
      'line': 0.5,
      'line_kind': 'half_point',
      'market': 'singles',
      'over_odds': -120,
      'player': 'Alex Bregman',
      'sportsbook': 'Betr',
      'under_odds': -120,
    }),
  ])
# ---
# name: test_dk_parser_hits_fixture_golden
  list([
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -243,
      'player': 'Alex Bregman',
      'sportsbook': 'DraftKings',
      'under_odds': 180,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -182,
      'player': 'Bryce Eldridge',
      'sportsbook': 'DraftKings',
      'under_odds': 136,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -174,
      'player': 'Carson Kelly',
      'sportsbook': 'DraftKings',
      'under_odds': 130,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -259,
      'player': 'Casey Schmitt',
      'sportsbook': 'DraftKings',
      'under_odds': 191,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -164,
      'player': 'Daniel Susac',
      'sportsbook': 'DraftKings',
      'under_odds': 123,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -140,
      'player': 'Dansby Swanson',
      'sportsbook': 'DraftKings',
      'under_odds': 106,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -120,
      'player': 'Drew Gilbert',
      'sportsbook': 'DraftKings',
      'under_odds': -110,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -154,
      'player': 'Ian Happ',
      'sportsbook': 'DraftKings',
      'under_odds': 116,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 1.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': 195,
      'player': 'Jung Hoo Lee',
      'sportsbook': 'DraftKings',
      'under_odds': -266,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 1.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': 174,
      'player': 'Luis Arraez',
      'sportsbook': 'DraftKings',
      'under_odds': -236,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -168,
      'player': 'Matt Chapman',
      'sportsbook': 'DraftKings',
      'under_odds': 126,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -177,
      'player': 'Michael Busch',
      'sportsbook': 'DraftKings',
      'under_odds': 133,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -132,
      'player': 'Moises Ballesteros',
      'sportsbook': 'DraftKings',
      'under_odds': -101,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -249,
      'player': 'Nico Hoerner',
      'sportsbook': 'DraftKings',
      'under_odds': 183,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -216,
      'player': 'Pete Crow-Armstrong',
      'sportsbook': 'DraftKings',
      'under_odds': 161,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -212,
      'player': 'Rafael Devers',
      'sportsbook': 'DraftKings',
      'under_odds': 158,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -202,
      'player': 'Seiya Suzuki',
      'sportsbook': 'DraftKings',
      'under_odds': 151,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -184,
      'player': 'Willy Adames',
      'sportsbook': 'DraftKings',
      'under_odds': 137,
    }),
  ])
# ---
# name: test_dk_parser_strikeouts_fixture_golden
  list([
    dict({
      'is_main_line': True,
      'league': None,
      'line': 5.5,
      'line_kind': 'ou',
      'market': 'strikeouts',
      'over_odds': 112,
      'player': 'Connelly Early',
      'sportsbook': 'DraftKings',
      'under_odds': -143,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 4.5,
      'line_kind': 'ou',
      'market': 'strikeouts',
      'over_odds': -139,
      'player': 'Nathan Eovaldi',
      'sportsbook': 'DraftKings',
      'under_odds': 109,
    }),
  ])
# ---
# name: test_espn_parser_batter_hits_golden
  list([
    dict({
      'is_main_line': True,
      'league': None,
      'line': 1.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': 180,
      'player': 'Amed Rosario',
      'sportsbook': 'ESPN',
      'under_odds': -240,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -160,
      'player': 'Jazz Chisholm Jr.',
      'sportsbook': 'ESPN',
      'under_odds': 125,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 0.5,
      'line_kind': 'ou',
      'market': 'hits',
      'over_odds': -120,
      'player': 'Zach McKinstry',
      'sportsbook': 'ESPN',
      'under_odds': -110,
    }),
  ])
# ---
# name: test_espn_parser_pitcher_strikeouts_golden
  list([
    dict({
      'is_main_line': True,
      'league': None,
      'line': 4.5,
      'line_kind': 'ou',
      'market': 'strikeouts',
      'over_odds': -155,
      'player': 'Framber Valdez',
      'sportsbook': 'ESPN',
      'under_odds': 110,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 5.5,
      'line_kind': 'ou',
      'market': 'strikeouts',
      'over_odds': -120,
      'player': 'Gerrit Cole',
      'sportsbook': 'ESPN',
      'under_odds': -115,
    }),
  ])
# ---
# name: test_fd_parser_pitcher_strikeouts_golden
  list([
    dict({
      'is_main_line': True,
      'league': None,
      'line': 5.5,
      'line_kind': 'ou',
      'market': 'strikeouts',
      'over_odds': -114,
      'player': 'Parker Messick',
      'sportsbook': 'FanDuel',
      'under_odds': -114,
    }),
    dict({
      'is_main_line': True,
      'league': None,
      'line': 5.5,
      'line_kind': 'ou',
      'market': 'strikeouts',
      'over_odds': 116,
      'player': 'Shane Drohan',
      'sportsbook': 'FanDuel',
      'under_odds': -142,
    }),
  ])
# ---
